--- a/po4a.cfg
+++ b/po4a.cfg
@@ -1,29 +1,29 @@
 [po4a_langs] pl fr cs de
 [po4a_paths] translations/$master/$master.pot $lang:translations/$master/$lang.po
 
-[type: latex] sections/title_page.tex $lang:sections/translated/$lang/title_page.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] sections/title_page.tex $lang:sections/translated/$lang/title_page.tex
 
-[type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex
+[type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex
+[type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex
 
-[type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] clash/force_of_will.tex $lang:clash/translated/$lang/force_of_will.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] clash/dragoncurse_castle.tex $lang:clash/translated/$lang/dragoncurse_castle.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex
+[type: latex] clash/force_of_will.tex $lang:clash/translated/$lang/force_of_will.tex
+[type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex
+[type: latex] clash/dragoncurse_castle.tex $lang:clash/translated/$lang/dragoncurse_castle.tex
 
-[type: latex] campaigns/inferno_devilish_plan.tex $lang:campaigns/translated/$lang/inferno_devilish_plan.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] campaigns/inferno_deal_with_the_devil.tex $lang:campaigns/translated/$lang/inferno_deal_with_the_devil.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] campaigns/castle_greek_gift.tex $lang:campaigns/translated/$lang/castle_greek_gift.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] campaigns/castle_sicilian_dragon.tex $lang:campaigns/translated/$lang/castle_sicilian_dragon.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] campaigns/castle_two_knights_defense.tex $lang:campaigns/translated/$lang/castle_two_knights_defense.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] campaigns/inferno_devilish_plan.tex $lang:campaigns/translated/$lang/inferno_devilish_plan.tex
+[type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex
+[type: latex] campaigns/inferno_deal_with_the_devil.tex $lang:campaigns/translated/$lang/inferno_deal_with_the_devil.tex
+[type: latex] campaigns/castle_greek_gift.tex $lang:campaigns/translated/$lang/castle_greek_gift.tex
+[type: latex] campaigns/castle_sicilian_dragon.tex $lang:campaigns/translated/$lang/castle_sicilian_dragon.tex
+[type: latex] campaigns/castle_two_knights_defense.tex $lang:campaigns/translated/$lang/castle_two_knights_defense.tex
 
-[type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize,figure*"
-[type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] sections/notes.tex $lang:sections/translated/$lang/notes.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex
+[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex
+[type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex
+[type: latex] sections/notes.tex $lang:sections/translated/$lang/notes.tex
+[type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex
 
 [options] --addendum-charset=UTF-8 \
           --localized-charset=UTF-8 \
@@ -31,4 +31,5 @@
           --master-language=en_US \
           --wrap-po=newlines \
           --keep 0 \
+          --option verbatim=tikzpicture,multicols*,figure*,multicols \
           -v
