--- a/po4a.cfg
+++ b/po4a.cfg
@@ -3,6 +3,7 @@
 
 [type: latex] sections/title_page.tex $lang:sections/translated/$lang/title_page.tex
 
+[type: latex] coops/close_to_enemies.tex $lang:coops/translated/$lang/close_to_enemies.tex
 [type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex
 [type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex
 [type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex
