--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -32,7 +32,6 @@ jobs:
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
         run: |
-          uname -a
           sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
           wget --quiet ${{ vars.PO4A_GH_URL }}/v${{ vars.PO4A_VERSION }}/po4a-${{ vars.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
           export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
@@ -122,8 +121,7 @@ jobs:
     steps:
       - name: Install poppler
         run: |
-          uname -a
-          sudo apt-get update && sudo apt-get install -y poppler-utils
+          sudo apt-get install -y poppler-utils
 
       - name: Download PDFs
         uses: actions/download-artifact@v4
