--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -13,6 +13,9 @@ on:
 
 env:
   ARTIFACT_RETENTION_DAYS: 1
+  GHOSTSCRIPT_URL: https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs10030/gs_10.03.0_amd64_snap.tgz
+  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
+  PO4A_VERSION: 0.73
 
 jobs:
   build:
@@ -36,7 +39,7 @@ jobs:
 
       - name: Install ghostscript
         run: |
-          wget --quiet ${{ vars.GHOSTSCRIPT_URL }}
+          wget --quiet ${{ env.GHOSTSCRIPT_URL }}
           tar -xvf *_amd64_snap.tgz
           sudo snap install ./*_amd64_snap/*_amd64.snap --devmode
 
