Move coop scenarios to the mission book

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -6,6 +6,8 @@
 [type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex
 [type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex
 [type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex
+[type: latex] coops/close_to_enemies.tex $lang:coops/translated/$lang/close_to_enemies.tex
+[type: latex] coops/stand_united.tex $lang:coops/translated/$lang/stand_united.tex
 
 [type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex
 [type: latex] clash/force_of_will.tex $lang:clash/translated/$lang/force_of_will.tex
@@ -31,5 +33,5 @@
           --master-language=en_US \
           --wrap-po=newlines \
           --keep 0 \
-          --option verbatim=tikzpicture,multicols*,figure*,multicols \
+          --option verbatim=tikzpicture,multicols*,figure*,multicols,table* \
           -v
