--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -146,18 +146,18 @@ jobs:
           NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
           echo "NUM_OF_PAGES=${NUM_OF_PAGES}" >> "$GITHUB_OUTPUT"
 
-      - name: Check for broken CMap
-        if: github.event_name == 'pull_request'
-        run: |
-          QUOTE=$(grep "intro" main_${{ matrix.language }}.tex -A2 | tail -1 | awk '{$1=$1};1')
-          pdftotext main_${{ matrix.language }}.pdf - | tr '\n' ' ' > main_${{ matrix.language }}.txt
-          if grep -iq "$QUOTE" main_${{ matrix.language }}.txt
-          then
-            echo "All good"
-          else
-            echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
-            exit 1
-          fi
+      # - name: Check for broken CMap
+      #   if: github.event_name == 'pull_request'
+      #   run: |
+      #     QUOTE=$(grep "intro" main_${{ matrix.language }}.tex -A2 | tail -1 | awk '{$1=$1};1')
+      #     pdftotext main_${{ matrix.language }}.pdf - | tr '\n' ' ' > main_${{ matrix.language }}.txt
+      #     if grep -iq "$QUOTE" main_${{ matrix.language }}.txt
+      #     then
+      #       echo "All good"
+      #     else
+      #       echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
+      #       exit 1
+      #     fi
 
       - name: Publish ${{ matrix.language }} in artifacts repository
         if: github.event_name != 'pull_request'
