--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -43,14 +43,14 @@ jobs:
           export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
           ./${PO4A_DIR}/po4a --no-update po4a.cfg
 
-      # - name: Compile mission book
-      #   uses: xu-cheng/latex-action@v3
-      #   with:
-      #     extra_system_packages: "inkscape"
-      #     latexmk_use_lualatex: true
-      #     latexmk_shell_escape: true
-      #     pre_compile: export HOMM3_GITHUB_BUILD=1
-      #     root_file: main_${{ matrix.language }}.tex
+      - name: Compile mission book
+        uses: xu-cheng/latex-action@v3
+        with:
+          extra_system_packages: "inkscape"
+          latexmk_use_lualatex: true
+          latexmk_shell_escape: true
+          pre_compile: export HOMM3_GITHUB_BUILD=1
+          root_file: main_${{ matrix.language }}.tex
 
       - name: Install ghostscript
         run: |
@@ -59,19 +59,19 @@ jobs:
           tar -xvf *_amd64_snap.tgz
           sudo snap install ./*_amd64_snap/*_amd64.snap --devmode
 
-      # - name: Optimize PDF
-      #   run: |
-      #     du -sh main_${{ matrix.language }}.pdf
-      #     tools/optimize.sh ${{ matrix.language }}
-      #     mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
-      #     du -sh main_${{ matrix.language }}.pdf
-      #
-      # - uses: actions/upload-artifact@v4
-      #   if: github.event_name == 'pull_request'
-      #   with:
-      #     name: main_${{ matrix.language }}
-      #     path: main_${{ matrix.language }}.pdf
-      #     retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+      - name: Optimize PDF
+        run: |
+          du -sh main_${{ matrix.language }}.pdf
+          tools/optimize.sh ${{ matrix.language }}
+          mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
+          du -sh main_${{ matrix.language }}.pdf
+
+      - uses: actions/upload-artifact@v4
+        if: github.event_name == 'pull_request'
+        with:
+          name: main_${{ matrix.language }}
+          path: main_${{ matrix.language }}.pdf
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
       - name: Move file
         run: |
@@ -146,21 +146,21 @@ jobs:
           NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
           echo "NUM_OF_PAGES=${NUM_OF_PAGES}" >> "$GITHUB_OUTPUT"
 
-      # - name: Check for broken CMap
-      #   if: github.event_name == 'pull_request'
-      #   run: |
-      #     QUOTE=$(grep "intro" main_${{ matrix.language }}.tex -A2 | tail -1 | awk '{$1=$1};1')
-      #     pdftotext main_${{ matrix.language }}.pdf - | tr '\n' ' ' > main_${{ matrix.language }}.txt
-      #     if grep -iq "$QUOTE" main_${{ matrix.language }}.txt
-      #     then
-      #       echo "All good"
-      #     else
-      #       echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
-      #       exit 1
-      #     fi
+      - name: Check for broken CMap
+        if: github.event_name == 'pull_request'
+        run: |
+          QUOTE=$(grep "intro" main_${{ matrix.language }}.tex -A2 | tail -1 | awk '{$1=$1};1')
+          pdftotext main_${{ matrix.language }}.pdf - | tr '\n' ' ' > main_${{ matrix.language }}.txt
+          if grep -iq "$QUOTE" main_${{ matrix.language }}.txt
+          then
+            echo "All good"
+          else
+            echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
+            exit 1
+          fi
 
       - name: Publish ${{ matrix.language }} in artifacts repository
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v4
         with:
           deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
