--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -17,6 +17,7 @@ env:
 jobs:
   make_monochrome:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
 
     steps:
       - name: Set up repository
@@ -95,75 +96,75 @@ jobs:
           export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
           ./${PO4A_DIR}/po4a --no-update po4a.cfg
 
-      # - name: Compile mission book
-      #   uses: xu-cheng/latex-action@v3
-      #   with:
-      #     extra_system_packages: "inkscape"
-      #     latexmk_use_lualatex: true
-      #     latexmk_shell_escape: true
-      #     pre_compile: export HOMM3_GITHUB_BUILD=1
-      #     root_file: main_${{ matrix.language }}.tex
-      #
-      # - name: Install ghostscript
-      #   run: |
-      #     echo ${{ env.GHOSTSCRIPT_URL }}
-      #     wget --quiet ${{ env.GHOSTSCRIPT_URL }}
-      #     tar -xvf *_amd64_snap.tgz
-      #     sudo snap install ./*_amd64_snap/*_amd64.snap --devmode
-      #
-      # - name: Optimize PDF
-      #   run: |
-      #     du -sh main_${{ matrix.language }}.pdf
-      #     tools/optimize.sh ${{ matrix.language }}
-      #     mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
-      #     du -sh main_${{ matrix.language }}.pdf
-      #
-      # - uses: actions/upload-artifact@v4
-      #   if: github.event_name == 'pull_request'
-      #   with:
-      #     name: main_${{ matrix.language }}
-      #     path: main_${{ matrix.language }}.pdf
-      #     retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
-      #
-      # - name: Install poppler
-      #   if:  github.event_name == 'pull_request'
-      #   run: sudo apt-get update && sudo apt-get install -y poppler-utils
-      #
-      # - name: Check number of pages
-      #   id: check_pages
-      #   if: ${{ matrix.language == 'en' && github.event_name == 'pull_request' }}
-      #   run: |
-      #     NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
-      #     echo "NUM_OF_PAGES=${NUM_OF_PAGES}" >> "$GITHUB_OUTPUT"
-      #
-      # - name: Check for broken CMap
-      #   if: github.event_name == 'pull_request'
-      #   run: |
-      #     QUOTE=$(grep "intro" main_${{ matrix.language }}.tex -A2 | tail -1 | awk '{$1=$1};1')
-      #     pdftotext main_${{ matrix.language }}.pdf - | tr '\n' ' ' > main_${{ matrix.language }}.txt
-      #     if grep -iq "$QUOTE" main_${{ matrix.language }}.txt
-      #     then
-      #       echo "All good"
-      #     else
-      #       echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
-      #       exit 1
-      #     fi
-      #
-      # - name: Move file
-      #   run: |
-      #     mkdir ${{ matrix.language }}
-      #     mv main_${{ matrix.language }}.pdf ${{ matrix.language }}
+      - name: Compile mission book
+        uses: xu-cheng/latex-action@v3
+        with:
+          extra_system_packages: "inkscape"
+          latexmk_use_lualatex: true
+          latexmk_shell_escape: true
+          pre_compile: export HOMM3_GITHUB_BUILD=1
+          root_file: main_${{ matrix.language }}.tex
+
+      - name: Install ghostscript
+        run: |
+          echo ${{ env.GHOSTSCRIPT_URL }}
+          wget --quiet ${{ env.GHOSTSCRIPT_URL }}
+          tar -xvf *_amd64_snap.tgz
+          sudo snap install ./*_amd64_snap/*_amd64.snap --devmode
+
+      - name: Optimize PDF
+        run: |
+          du -sh main_${{ matrix.language }}.pdf
+          tools/optimize.sh ${{ matrix.language }}
+          mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
+          du -sh main_${{ matrix.language }}.pdf
+
+      - uses: actions/upload-artifact@v4
+        if: github.event_name == 'pull_request'
+        with:
+          name: main_${{ matrix.language }}
+          path: main_${{ matrix.language }}.pdf
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
+      - name: Install poppler
+        if:  github.event_name == 'pull_request'
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils
+
+      - name: Check number of pages
+        id: check_pages
+        if: ${{ matrix.language == 'en' && github.event_name == 'pull_request' }}
+        run: |
+          NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
+          echo "NUM_OF_PAGES=${NUM_OF_PAGES}" >> "$GITHUB_OUTPUT"
+
+      - name: Check for broken CMap
+        if: github.event_name == 'pull_request'
+        run: |
+          QUOTE=$(grep "intro" main_${{ matrix.language }}.tex -A2 | tail -1 | awk '{$1=$1};1')
+          pdftotext main_${{ matrix.language }}.pdf - | tr '\n' ' ' > main_${{ matrix.language }}.txt
+          if grep -iq "$QUOTE" main_${{ matrix.language }}.txt
+          then
+            echo "All good"
+          else
+            echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
+            exit 1
+          fi
+
+      - name: Move file
+        if: github.event_name != 'pull_request'
+        run: |
+          mkdir ${{ matrix.language }}
+          mv main_${{ matrix.language }}.pdf ${{ matrix.language }}
 
       - name: Download monoochrome maps
+        if: github.event_name != 'pull_request'
         uses: actions/download-artifact@v4
         with:
           name: monochrome-maps
           path: assets/maps
 
-      - name: What's going on?
-        run: git status
-
       - name: Compile monochrome mission book
+        if: github.event_name != 'pull_request'
         uses: xu-cheng/latex-action@v3
         with:
           extra_system_packages: "inkscape"
@@ -172,32 +173,27 @@ jobs:
           pre_compile: export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
           root_file: main_${{ matrix.language }}.tex
 
-      # - name: Optimize PDF
-      #   run: |
-      #     du -sh main_${{ matrix.language }}.pdf
-      #     tools/optimize.sh ${{ matrix.language }}
-      #     mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
-      #     du -sh main_${{ matrix.language }}.pdf
+      - name: Optimize PDF
+        if: github.event_name != 'pull_request'
+        run: |
+          du -sh main_${{ matrix.language }}.pdf
+          tools/optimize.sh ${{ matrix.language }}
+          mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
+          du -sh main_${{ matrix.language }}.pdf
 
-      - uses: actions/upload-artifact@v4
-        if: github.event_name == 'pull_request'
+      - name: Move file
+        if: github.event_name != 'pull_request'
+        run: mv main_${{ matrix.language }}.pdf ${{ matrix.language }}/main_${{ matrix.language }}-mono.pdf
+
+      - name: Publish ${{ matrix.language }} in artifacts repository
+        if: github.event_name != 'pull_request'
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          name: main_${{ matrix.language }}-mono
-          path: main_${{ matrix.language }}.pdf
-          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
-
-      # - name: Move file
-      #   run: mv main_${{ matrix.language }}.pdf ${{ matrix.language }}/main_${{ matrix.language }}-mono.pdf
-      #
-      # - name: Publish ${{ matrix.language }} in artifacts repository
-      #   if: github.event_name != 'pull_request'
-      #   uses: peaceiris/actions-gh-pages@v4
-      #   with:
-      #     deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
-      #     external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
-      #     publish_branch: ${{ matrix.language }}
-      #     publish_dir: ./${{ matrix.language }}
-      #     force_orphan: true
+          deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
+          external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
+          publish_branch: ${{ matrix.language }}
+          publish_dir: ./${{ matrix.language }}
+          force_orphan: true
 
 
   check_pages:
