--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -67,7 +67,8 @@ jobs:
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build:
-    needs: ${{ github.event_name == 'pull_request' && '[]' || 'make_monochrome' }}  # to make sure check_pages doesn't depend on make_monochrome
+    needs: make_monochrome
+    if: always()
     runs-on: ubuntu-latest
     outputs:
       number_of_pages: ${{ steps.check_pages.outputs.num_of_pages }}
@@ -198,7 +199,7 @@ jobs:
   check_pages:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'pull_request'
+    if: always() && github.event_name == 'pull_request'
     strategy:
       fail-fast: false
       matrix:
